--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "baffle": "^0.3.6",
+    "jwt-decode": "^4.0.0",
     "next": "15.0.2",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.5",
